--- a/parser/Makefile
+++ b/parser/Makefile
@@ -22,4 +22,4 @@ gofmt:
 	gofmt -w $(GOFILES)
 
 parse.go: parse.y
-	goyacc -o $@ -p boosd $< && gofmt -w $@ && sed -i 's/package main/package parser/' $@
+	go tool yacc -o $@ -p boosd $< && gofmt -w $@ && sed -i 's/package main/package parser/' $@
