parser: remove need for sed in parse.go generation

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,2 +1,2 @@
 parse.go: parse.y
-	go tool yacc -o $@ -p boosd $< && gofmt -w $@ && sed -i 's/package main/package parser/' $@
+	go tool yacc -o $@ -p boosd $< && gofmt -w $@
